# cpp-questions-by-level

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  questions-sync.yml  readme-sync.yml
code/level-1/12-virtual-constructor/src/: main.cpp
code/level-1/13-destructor/src/: main.cpp
code/level-1/14-copy-constructor/src/: main.cpp
code/level-1/17-this-pointer/src/: main.cpp
code/level-1/22-const/src/: main.cpp
code/level-1/25-main-function/src/: main.cpp
code/level-1/3-struct-and-class/src/: main.cpp
code/level-1/30-namespaces/src/: main.cpp
code/level-2/22-diamond-problem/src/: main.cpp
code/level-2/23-virtual-inheritance/src/: main.cpp
code/level-2/7-rule-of-three-five-zero/src/: main.cpp
code/level-2/9-lvalues-rvalues/src/: main.cpp
code/level-4/8-inline-namespaces/include/: geometry.h
code/level-4/8-inline-namespaces/src/: main.cpp
examples/level-1/11-default-constructor/src/: main.cpp
examples/level-1/16-friend-keyword/src/: main.cpp
examples/level-1/17-this-pointer/src/: main.cpp
examples/level-1/30-namespaces/src/: main.cpp
examples/level-2/15-dangling-pointer/src/: main.cpp
examples/level-2/20-object-slicing/src/: main.cpp
examples/level-2/21-multiple-inheritance/src/: main.cpp
examples/level-2/22-diamond-problem/src/: main.cpp
examples/level-2/23-virtual-inheritance/src/: main.cpp
examples/level-2/36-raii/src/: main.cpp
examples/level-3/18-locks/src/: main.cpp
examples/level-3/25-mutable-keyword/src/: main.cpp
examples/level-4/8-inline-namespaces/src/: geometry.cpp
questions/level-1/: 11-default-constructor.md  12-virtual-constructor.md  13-destructor.md  14-copy-constructor.md  16-friend-keyword.md  17-this-pointer.md  22-const.md  25-main-function.md  3-struct-and-class.md  30-namespaces.md
questions/level-2/: 15-dangling-pointer.md  20-object-slicing.md  21-multiple-inheritance.md  22-diamond-problem.md  23-virtual-inheritance.md  36-raii.md  7-rule-of-three-five-zero.md  9-lvalues-rvalues.md
questions/level-3/: 18-locks.md  25-mutable-keyword.md
questions/level-4/: 8-inline-namespaces.md
scripts/: generate_readme.py  link_examples.py
